move files to the root

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="../sakura.css" />
+    <link rel="stylesheet" type="text/css" href="sakura.css" />
     <title>WebUSB DFU for NumWorks</title>
     <script src="dfu.js"></script>
     <script src="dfuse.js"></script>
