--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
       <label for="pid">Product ID (hex):</label>
       <input type="text" name="pid" id="pid" maxlength="6" size="8" pattern="0x[A-Fa-f0-9]{1,4}"/>
     </p>
-    <p>
+    <p style="text-align: center;">
+      Plug in your NumWorks calculator and press its reset button, then click here:<br>
       <button id="connect">Connect to NumWorks calculator</button>
     </p>
     <dialog id="interfaceDialog">
@@ -82,5 +83,18 @@
         </fieldset>
       </form>
     </fieldset>
+    <br/>
+    <footer>
+      <hr>
+      <p>WebUSB is currently only supported by Chromium / Google Chrome.</p>
+      <p>For Chrome to communicate with a USB device, it must have permission to access the device and the operating system must be able to load a generic driver that libusb can talk to.</p>
+      <p>
+        <ul>
+          <li>On Windows, that means that an appropriate WinUSB/libusb driver must first be installed. This can be done manually with programs such as <a href="https://zadig.akeo.ie/">Zadig</a>.</li>
+          <li>On Linux, that means that the current user must have permission to access the device.</li>
+          <li>On macOS and ChromeBooks, it should work directly.</li>
+        </ul>
+      </p>
+    </footer>
   </body>
 </html>
